<resources>
    <string name="app_name">AeviceDemo</string>
    <string name="skip"><u>SKIP</u></string>
    <string name="get_started">Get Started</string>
    <string name="intro_1">Intro 1</string>
    <string name="intro_des">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</string>
    <string name="intro_2">Intro 2</string>
    <string name="intro_3">Intro 3</string>
    <string name="years_old">%d years old</string>
    <string name="blood_type">Blood Type: %s</string>
    <string name="add_medication">Add Medication</string>
    <string name="add_medication_pre">Add Prescribed Medication</string>
    <string name="add_symtions">Add Symptoms</string>
    <string name="summary">Summary</string>
    <string name="hint_doctor_visit">Date of doctor visit</string>
    <string name="medication_name">Medicine name</string>
    <string name="save">Save</string>
    <string name="select_time">Select Time</string>
    <string name="taken_question">Have you taken your medication?</string>
    <string name="mild"><u>Mild</u></string>
    <string name="moderate"><u>Moderate</u></string>
    <string name="severe"><u>Severe</u></string>
    <string name="cough">Cough</string>
    <string name="wheeze">Wheeze</string>
    <string name="other_symptons">Other Symptons</string>
    <string name="no_data">You have not any medication</string>
    <string name="channel_name">demo_chanel_demo</string>
    <string name="channel_description">Description chanel</string>

    <string-array name="times">
        <item>00:00</item>
        <item>00:30</item>
        <item>01:00</item>
        <item>01:30</item>
        <item>02:00</item>
        <item>02:30</item>
        <item>03:00</item>
        <item>03:30</item>
        <item>04:00</item>
        <item>04:30</item>
        <item>05:00</item>
        <item>05:30</item>
        <item>06:00</item>
        <item>06:30</item>
        <item>07:00</item>
        <item>07:30</item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
        <item>22:00</item>
        <item>22:30</item>
        <item>23:00</item>
        <item>23:30</item>
    </string-array>
</resources>
