<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SymptomActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <TextView
        style="@style/textTitle"
        android:text="@string/add_symtions"/>

    <TextView
        android:id="@+id/tvCurrentdate"
        style="@style/textCenterBlack"
        android:textSize="16sp"
        android:text="22/03/2020"
        android:layout_marginBottom="@dimen/default_padding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            style="@style/textCenterBlack"
            android:layout_weight="1" />
        <TextView
            style="@style/textCenterBlack"
            android:layout_weight="1"
            android:text="@string/mild"/>
        <TextView
            style="@style/textCenterBlack"
            android:layout_weight="1"
            android:text="@string/moderate"/>
        <TextView
            style="@style/textCenterBlack"
            android:layout_weight="1"
            android:text="@string/severe"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <TextView
            style="@style/textCenterBlack"
            android:layout_weight="3"
            android:text="@string/cough"/>
        <RadioGroup
            android:id="@+id/coughGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <RadioButton
                android:id="@+id/cbCoughMild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioCoughClicked" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="2" />
            <RadioButton
                android:id="@+id/cbCoughModerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioCoughClicked" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="2" />
            <RadioButton
                android:id="@+id/cbCoughSevere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioCoughClicked"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center">
        <TextView
            style="@style/textCenterBlack"
            android:layout_weight="3"
            android:text="@string/wheeze"/>

        <RadioGroup
            android:id="@+id/wheezeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <RadioButton
                    android:id="@+id/cbWheezeMild"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioWhezeClicked"
                    android:gravity="center"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="2" />
                <RadioButton
                    android:id="@+id/cbWheezeModerate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioWhezeClicked" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="2" />
                <RadioButton
                    android:id="@+id/cbWheezeSevere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioWhezeClicked" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/vOtherSymphton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_symptons" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_add_purple" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSymphton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_padding" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_corner_button"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>