<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfile"
            android:layout_width="96dp"
            android:layout_height="96dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ivProfile"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvName"
                style="@style/textBlack" />
            <TextView
                android:id="@+id/tvYearsOld"
                style="@style/textBlack" />
            <TextView
                android:id="@+id/tvBloodTypes"
                style="@style/textBlack" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/vAddMedication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:background="@color/grey">/

        <LinearLayout
            style="@style/layoutFlexHorizontal"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"
                android:src="@drawable/ic_purple"/>
            <TextView
                style="@style/textCenterBlack"
                android:text="@string/add_medication"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>
        <LinearLayout
            android:id="@+id/vAddSymptom"
            style="@style/layoutFlexHorizontal"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"
                android:src="@drawable/ic_blue"/>
            <TextView
                style="@style/textCenterBlack"
                android:text="@string/add_symtions"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>
        <LinearLayout
            android:id="@+id/vSummary"
            style="@style/layoutFlexHorizontal"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"
                android:src="@drawable/ic_green"/>
            <TextView
                style="@style/textCenterBlack"
                android:text="@string/summary"/>
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listMedications"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>